get all songs handler
