# docs/swagger.json
@@ -9,6 +9,50 @@
     "host": "localhost:8080",
     "basePath": "/song",
     "paths": {
+        "/": {
+            "get": {
+                "description": "Handler for Getting songs",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "song"
+                ],
+                "summary": "Get all Songs",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/db.Song"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "func"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "func"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "func"
+                        }
+                    }
+                }
+            }
+        },
         "/create": {
             "post": {
                 "description": "Handler for Createting new song",
